--- a/client/radio/package.json
+++ b/client/radio/package.json
@@ -10,9 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-showdown": "^2.3.1"
+    "react-router-dom": "^7.13.0",
+    "react-showdown": "^2.3.1",
+    "react-toastify": "^11.0.5",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
